Account circle goes to actual linkedin profiles and fixed alignment

--- a/src/test/core.css
+++ b/src/test/core.css
@@ -80,6 +80,7 @@ body {
   width: 20px;
 }
 
+
 /* Main Body */
 .body__main {
   display: flex;
@@ -280,9 +281,14 @@ body {
   border-radius: 10px;
 }
 
+.header__post{
+  display: flex;
+  justify-content: space-between;
+}
+
 .post__header {
   display: flex;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .post__body > p{
@@ -291,7 +297,8 @@ body {
 
 .post__info {
   margin-left: 10px;
-  padding-right:335px;
+  display: flex;
+  align-items: center;
 }
 
 .material-icons > img{
@@ -466,4 +473,8 @@ a{
 .reaction > p{
   font-size:small;
   cursor: pointer;
+}
+
+#adjust{
+  margin-bottom: 5px;
 }
